Minor notebook updates

--- a/00c-extract_training_data_global.ipynb
+++ b/00c-extract_training_data_global.ipynb
@@ -271,6 +271,7 @@
     "import warnings\n",
     "\n",
     "import geopandas as gpd\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from gplately.tools import plate_isotherm_depth\n",
     "\n",
@@ -665,6 +666,18 @@
     "        subduction_data,\n",
     "        plate_reconstruction=plate_model,\n",
     "    )\n",
+    "    subduction_data[\"sediment_flux (m^2/yr)\"] = (\n",
+    "        subduction_data[\"sediment_thickness (m)\"]\n",
+    "        * subduction_data[\"convergence_rate_orthogonal (cm/yr)\"] * 1.0e-2\n",
+    "    ).clip(0.0, np.inf)\n",
+    "    subduction_data[\"carbon_flux (t/m/yr)\"] = (\n",
+    "        subduction_data[\"total_carbon_density (t/m^2)\"]\n",
+    "        * subduction_data[\"convergence_rate_orthogonal (cm/yr)\"] * 1.0e-2\n",
+    "    ).clip(0.0, np.inf)\n",
+    "    subduction_data[\"water_flux (m^2/yr)\"] = (\n",
+    "        subduction_data[\"total_water_thickness (m)\"]\n",
+    "        * subduction_data[\"convergence_rate_orthogonal (cm/yr)\"] * 1.0e-2\n",
+    "    ).clip(0.0, np.inf)\n",
     "\n",
     "    if subduction_data_filename is not None:\n",
     "        subduction_data.to_csv(subduction_data_filename, index=False)"
