--- a/02-create_probability_maps.ipynb
+++ b/02-create_probability_maps.ipynb
@@ -6,10 +6,10 @@
    "id": "80263a75",
    "metadata": {
     "papermill": {
-     "duration": 0.005505,
-     "end_time": "2024-07-30T09:39:10.320687",
+     "duration": 0.002971,
+     "end_time": "2024-08-28T10:12:17.545556",
      "exception": false,
-     "start_time": "2024-07-30T09:39:10.315182",
+     "start_time": "2024-08-28T10:12:17.542585",
      "status": "completed"
     },
     "tags": []
@@ -25,10 +25,10 @@
    "id": "36e80d65",
    "metadata": {
     "papermill": {
-     "duration": 0.003051,
-     "end_time": "2024-07-30T09:39:10.327236",
+     "duration": 0.002443,
+     "end_time": "2024-08-28T10:12:17.550663",
      "exception": false,
-     "start_time": "2024-07-30T09:39:10.324185",
+     "start_time": "2024-08-28T10:12:17.548220",
      "status": "completed"
     },
     "tags": []
@@ -45,16 +45,16 @@
    "id": "9057911b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T09:39:10.334644Z",
-     "iopub.status.busy": "2024-07-30T09:39:10.334326Z",
-     "iopub.status.idle": "2024-07-30T09:39:10.341459Z",
-     "shell.execute_reply": "2024-07-30T09:39:10.340759Z"
+     "iopub.execute_input": "2024-08-28T10:12:17.556525Z",
+     "iopub.status.busy": "2024-08-28T10:12:17.556236Z",
+     "iopub.status.idle": "2024-08-28T10:12:17.562138Z",
+     "shell.execute_reply": "2024-08-28T10:12:17.561718Z"
     },
     "papermill": {
-     "duration": 0.012912,
-     "end_time": "2024-07-30T09:39:10.343139",
+     "duration": 0.010427,
+     "end_time": "2024-08-28T10:12:17.563471",
      "exception": false,
-     "start_time": "2024-07-30T09:39:10.330227",
+     "start_time": "2024-08-28T10:12:17.553044",
      "status": "completed"
     },
     "tags": []
@@ -80,10 +80,10 @@
    "id": "6bcc106f",
    "metadata": {
     "papermill": {
-     "duration": 0.003179,
-     "end_time": "2024-07-30T09:39:10.349319",
+     "duration": 0.002154,
+     "end_time": "2024-08-28T10:12:17.567941",
      "exception": false,
-     "start_time": "2024-07-30T09:39:10.346140",
+     "start_time": "2024-08-28T10:12:17.565787",
      "status": "completed"
     },
     "tags": []
@@ -98,16 +98,16 @@
    "id": "40a511d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T09:39:10.355856Z",
-     "iopub.status.busy": "2024-07-30T09:39:10.355601Z",
-     "iopub.status.idle": "2024-07-30T09:39:10.415124Z",
-     "shell.execute_reply": "2024-07-30T09:39:10.414525Z"
+     "iopub.execute_input": "2024-08-28T10:12:17.573337Z",
+     "iopub.status.busy": "2024-08-28T10:12:17.573113Z",
+     "iopub.status.idle": "2024-08-28T10:12:17.622846Z",
+     "shell.execute_reply": "2024-08-28T10:12:17.622272Z"
     },
     "papermill": {
-     "duration": 0.064712,
-     "end_time": "2024-07-30T09:39:10.416765",
+     "duration": 0.054555,
+     "end_time": "2024-08-28T10:12:17.624589",
      "exception": false,
-     "start_time": "2024-07-30T09:39:10.352053",
+     "start_time": "2024-08-28T10:12:17.570034",
      "status": "completed"
     },
     "tags": []
@@ -131,10 +131,10 @@
    "id": "2efa9d67",
    "metadata": {
     "papermill": {
-     "duration": 0.002436,
-     "end_time": "2024-07-30T09:39:10.421969",
+     "duration": 0.001977,
+     "end_time": "2024-08-28T10:12:17.628770",
      "exception": false,
-     "start_time": "2024-07-30T09:39:10.419533",
+     "start_time": "2024-08-28T10:12:17.626793",
      "status": "completed"
     },
     "tags": []
@@ -149,16 +149,16 @@
    "id": "f2d69c31",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T09:39:10.428114Z",
-     "iopub.status.busy": "2024-07-30T09:39:10.427896Z",
-     "iopub.status.idle": "2024-07-30T09:39:10.430897Z",
-     "shell.execute_reply": "2024-07-30T09:39:10.430452Z"
+     "iopub.execute_input": "2024-08-28T10:12:17.633754Z",
+     "iopub.status.busy": "2024-08-28T10:12:17.633574Z",
+     "iopub.status.idle": "2024-08-28T10:12:17.637887Z",
+     "shell.execute_reply": "2024-08-28T10:12:17.636589Z"
     },
     "papermill": {
-     "duration": 0.007744,
-     "end_time": "2024-07-30T09:39:10.432467",
+     "duration": 0.009339,
+     "end_time": "2024-08-28T10:12:17.640229",
      "exception": false,
-     "start_time": "2024-07-30T09:39:10.424723",
+     "start_time": "2024-08-28T10:12:17.630890",
      "status": "completed"
     },
     "tags": []
@@ -176,10 +176,10 @@
    "id": "544fcfcf",
    "metadata": {
     "papermill": {
-     "duration": 0.004436,
-     "end_time": "2024-07-30T09:39:10.441042",
+     "duration": 0.002727,
+     "end_time": "2024-08-28T10:12:17.645514",
      "exception": false,
-     "start_time": "2024-07-30T09:39:10.436606",
+     "start_time": "2024-08-28T10:12:17.642787",
      "status": "completed"
     },
     "tags": []
@@ -195,10 +195,10 @@
    "id": "dca6800a",
    "metadata": {
     "papermill": {
-     "duration": 0.002614,
-     "end_time": "2024-07-30T09:39:10.446745",
+     "duration": 0.003282,
+     "end_time": "2024-08-28T10:12:17.651945",
      "exception": false,
-     "start_time": "2024-07-30T09:39:10.444131",
+     "start_time": "2024-08-28T10:12:17.648663",
      "status": "completed"
     },
     "tags": []
@@ -213,16 +213,16 @@
    "id": "5303979d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T09:39:10.453022Z",
-     "iopub.status.busy": "2024-07-30T09:39:10.452777Z",
-     "iopub.status.idle": "2024-07-30T09:39:14.084205Z",
-     "shell.execute_reply": "2024-07-30T09:39:14.083616Z"
+     "iopub.execute_input": "2024-08-28T10:12:17.657283Z",
+     "iopub.status.busy": "2024-08-28T10:12:17.657089Z",
+     "iopub.status.idle": "2024-08-28T10:12:21.599042Z",
+     "shell.execute_reply": "2024-08-28T10:12:21.598402Z"
     },
     "papermill": {
-     "duration": 3.636301,
-     "end_time": "2024-07-30T09:39:14.085688",
+     "duration": 3.946357,
+     "end_time": "2024-08-28T10:12:21.600572",
      "exception": false,
-     "start_time": "2024-07-30T09:39:10.449387",
+     "start_time": "2024-08-28T10:12:17.654215",
      "status": "completed"
     },
     "tags": []
@@ -245,10 +245,10 @@
    "id": "ae9cc890",
    "metadata": {
     "papermill": {
-     "duration": 0.002111,
-     "end_time": "2024-07-30T09:39:14.090229",
+     "duration": 0.002058,
+     "end_time": "2024-08-28T10:12:21.604938",
      "exception": false,
-     "start_time": "2024-07-30T09:39:14.088118",
+     "start_time": "2024-08-28T10:12:21.602880",
      "status": "completed"
     },
     "tags": []
@@ -263,16 +263,16 @@
    "id": "7342050e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T09:39:14.095629Z",
-     "iopub.status.busy": "2024-07-30T09:39:14.095164Z",
-     "iopub.status.idle": "2024-07-30T09:39:14.102249Z",
-     "shell.execute_reply": "2024-07-30T09:39:14.101400Z"
+     "iopub.execute_input": "2024-08-28T10:12:21.610524Z",
+     "iopub.status.busy": "2024-08-28T10:12:21.610142Z",
+     "iopub.status.idle": "2024-08-28T10:12:21.616261Z",
+     "shell.execute_reply": "2024-08-28T10:12:21.615803Z"
     },
     "papermill": {
-     "duration": 0.011667,
-     "end_time": "2024-07-30T09:39:14.103867",
+     "duration": 0.010602,
+     "end_time": "2024-08-28T10:12:21.617617",
      "exception": false,
-     "start_time": "2024-07-30T09:39:14.092200",
+     "start_time": "2024-08-28T10:12:21.607015",
      "status": "completed"
     },
     "tags": []
@@ -281,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "<dask.config.set at 0x10f5d5ed0>"
+       "<dask.config.set at 0x1813e9810>"
       ]
      },
      "execution_count": 5,
@@ -299,10 +299,10 @@
    "id": "632c1c44",
    "metadata": {
     "papermill": {
-     "duration": 0.002222,
-     "end_time": "2024-07-30T09:39:14.108630",
+     "duration": 0.002243,
+     "end_time": "2024-08-28T10:12:21.622093",
      "exception": false,
-     "start_time": "2024-07-30T09:39:14.106408",
+     "start_time": "2024-08-28T10:12:21.619850",
      "status": "completed"
     },
     "tags": []
@@ -317,16 +317,16 @@
    "id": "f01bd62d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T09:39:14.114134Z",
-     "iopub.status.busy": "2024-07-30T09:39:14.113844Z",
-     "iopub.status.idle": "2024-07-30T09:39:20.257153Z",
-     "shell.execute_reply": "2024-07-30T09:39:20.256587Z"
+     "iopub.execute_input": "2024-08-28T10:12:21.627314Z",
+     "iopub.status.busy": "2024-08-28T10:12:21.627134Z",
+     "iopub.status.idle": "2024-08-28T10:12:27.710453Z",
+     "shell.execute_reply": "2024-08-28T10:12:27.709743Z"
     },
     "papermill": {
-     "duration": 6.148079,
-     "end_time": "2024-07-30T09:39:20.258804",
+     "duration": 6.08774,
+     "end_time": "2024-08-28T10:12:27.712122",
      "exception": false,
-     "start_time": "2024-07-30T09:39:14.110725",
+     "start_time": "2024-08-28T10:12:21.624382",
      "status": "completed"
     },
     "tags": []
@@ -359,10 +359,10 @@
    "id": "dc314a0d",
    "metadata": {
     "papermill": {
-     "duration": 0.002612,
-     "end_time": "2024-07-30T09:39:20.264401",
+     "duration": 0.002675,
+     "end_time": "2024-08-28T10:12:27.717870",
      "exception": false,
-     "start_time": "2024-07-30T09:39:20.261789",
+     "start_time": "2024-08-28T10:12:27.715195",
      "status": "completed"
     },
     "tags": []
@@ -379,16 +379,16 @@
    "id": "5ac247e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T09:39:20.271061Z",
-     "iopub.status.busy": "2024-07-30T09:39:20.270693Z",
-     "iopub.status.idle": "2024-07-30T09:48:14.447623Z",
-     "shell.execute_reply": "2024-07-30T09:48:14.447005Z"
+     "iopub.execute_input": "2024-08-28T10:12:27.724898Z",
+     "iopub.status.busy": "2024-08-28T10:12:27.724642Z",
+     "iopub.status.idle": "2024-08-28T10:22:03.804074Z",
+     "shell.execute_reply": "2024-08-28T10:22:03.803466Z"
     },
     "papermill": {
-     "duration": 534.184547,
-     "end_time": "2024-07-30T09:48:14.451649",
+     "duration": 576.087394,
+     "end_time": "2024-08-28T10:22:03.808017",
      "exception": false,
-     "start_time": "2024-07-30T09:39:20.267102",
+     "start_time": "2024-08-28T10:12:27.720623",
      "status": "completed"
     },
     "tags": []
@@ -398,56 +398,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: global; duration: 0:01:32.523596)\n"
+      "Calculating probabilities for PU model complete (region: global; duration: 0:01:36.948725)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: North America; duration: 0:01:23.257404)\n"
+      "Calculating probabilities for PU model complete (region: North America; duration: 0:01:30.483395)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: South America; duration: 0:01:21.832273)\n"
+      "Calculating probabilities for PU model complete (region: South America; duration: 0:01:26.198883)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: Southeast Asia; duration: 0:01:25.548673)\n"
+      "Calculating probabilities for PU model complete (region: Southeast Asia; duration: 0:01:30.402295)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: Tethys; duration: 0:01:21.994811)\n"
+      "Calculating probabilities for PU model complete (region: Tethys; duration: 0:01:27.258890)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for SVM model complete (region: global; duration: 0:00:39.441650)\n"
+      "Calculating probabilities for SVM model complete (region: global; duration: 0:00:44.824948)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for SVM model complete (region: North America; duration: 0:00:27.838362)\n"
+      "Calculating probabilities for SVM model complete (region: North America; duration: 0:00:32.083647)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for SVM model complete (region: South America; duration: 0:00:41.730182)\n"
+      "Calculating probabilities for SVM model complete (region: South America; duration: 0:00:47.867588)\n"
      ]
     }
    ],
@@ -529,10 +529,10 @@
    "id": "e94d2cc2",
    "metadata": {
     "papermill": {
-     "duration": 0.002947,
-     "end_time": "2024-07-30T09:48:14.457652",
+     "duration": 0.002995,
+     "end_time": "2024-08-28T10:22:03.814096",
      "exception": false,
-     "start_time": "2024-07-30T09:48:14.454705",
+     "start_time": "2024-08-28T10:22:03.811101",
      "status": "completed"
     },
     "tags": []
@@ -549,16 +549,16 @@
    "id": "23b349d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T09:48:14.464469Z",
-     "iopub.status.busy": "2024-07-30T09:48:14.464216Z",
-     "iopub.status.idle": "2024-07-30T11:37:34.835456Z",
-     "shell.execute_reply": "2024-07-30T11:37:34.834849Z"
+     "iopub.execute_input": "2024-08-28T10:22:03.820998Z",
+     "iopub.status.busy": "2024-08-28T10:22:03.820774Z",
+     "iopub.status.idle": "2024-08-28T16:13:21.367846Z",
+     "shell.execute_reply": "2024-08-28T16:13:21.365046Z"
     },
     "papermill": {
-     "duration": 6560.379417,
-     "end_time": "2024-07-30T11:37:34.839953",
+     "duration": 21077.572361,
+     "end_time": "2024-08-28T16:13:21.389391",
      "exception": false,
-     "start_time": "2024-07-30T09:48:14.460536",
+     "start_time": "2024-08-28T10:22:03.817030",
      "status": "completed"
     },
     "tags": []
@@ -568,56 +568,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: global; duration: 0:13:47.864206)\n"
+      "Creating grids for PU model complete (region: global; duration: 0:12:45.591400)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: North America; duration: 0:13:52.932468)\n"
+      "Creating grids for PU model complete (region: North America; duration: 0:12:39.979137)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: South America; duration: 0:13:48.556286)\n"
+      "Creating grids for PU model complete (region: South America; duration: 0:12:41.547800)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: Southeast Asia; duration: 0:13:55.180361)\n"
+      "Creating grids for PU model complete (region: Southeast Asia; duration: 0:12:43.957705)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: Tethys; duration: 0:13:55.035196)\n"
+      "Creating grids for PU model complete (region: Tethys; duration: 1:32:57.268913)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for SVM model complete (region: global; duration: 0:12:03.949143)\n"
+      "Creating grids for SVM model complete (region: global; duration: 0:55:32.882253)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for SVM model complete (region: North America; duration: 0:13:54.284209)\n"
+      "Creating grids for SVM model complete (region: North America; duration: 1:28:08.052080)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for SVM model complete (region: South America; duration: 0:14:02.558569)\n"
+      "Creating grids for SVM model complete (region: South America; duration: 1:03:48.248376)\n"
      ]
     }
    ],
@@ -686,10 +686,10 @@
    "id": "d779a208",
    "metadata": {
     "papermill": {
-     "duration": 0.003317,
-     "end_time": "2024-07-30T11:37:34.846829",
+     "duration": 0.016219,
+     "end_time": "2024-08-28T16:13:21.421602",
      "exception": false,
-     "start_time": "2024-07-30T11:37:34.843512",
+     "start_time": "2024-08-28T16:13:21.405383",
      "status": "completed"
     },
     "tags": []
@@ -718,14 +718,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 7108.057348,
-   "end_time": "2024-07-30T11:37:37.677870",
+   "duration": 21668.15692,
+   "end_time": "2024-08-28T16:13:24.686746",
    "environment_variables": {},
    "exception": null,
-   "input_path": "02a-create_probability_maps_global_selection.ipynb",
-   "output_path": "02a-create_probability_maps_global_selection.ipynb",
+   "input_path": "02-create_probability_maps.ipynb",
+   "output_path": "02-create_probability_maps.ipynb",
    "parameters": {},
-   "start_time": "2024-07-30T09:39:09.620522",
+   "start_time": "2024-08-28T10:12:16.529826",
    "version": "2.4.0"
   }
  },
